--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "dotenv": "^14.3.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.13",
+    "pug": "^3.0.2",
     "puppeteer": "^11.0.0"
   }
 }
