--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "bootstrap-icons": "^1.7.2",
     "dotenv": "^14.3.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.13",
