--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
+    "@elastic/elasticsearch": "^7.16.0",
     "bootstrap-icons": "^1.7.2",
     "dotenv": "^14.3.0",
     "express": "^4.17.1",
+    "mongoosastic": "^4.6.0",
     "mongoose": "^6.0.13",
+    "mongoose-atlas-search": "^1.0.8",
     "pug": "^3.0.2",
     "puppeteer": "^11.0.0"
   }
