--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
     "mongoose-atlas-search": "^1.0.8",
     "pug": "^3.0.2",
     "puppeteer": "^11.0.0"
+  },
+  "engines": {
+    "node": "16.14.0",
+    "npm": "8.3.1"
   }
 }
